k8s-deployment.yml
# This is an example of how to deploy Transmute under Kubernetes.
#
# NOTE: Do NOT use this file as is. Kubernetes clusters vary widely in configuration
# and various parts of the configuration will need to be modified to suit your cluster's
# ingress server, storage back-end, and so forth. Comments have been included to indicate
# where such modifications are most likely to be necessary.

---
apiVersion: v1
kind: Namespace
metadata:
  name: transmute

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmute
  namespace: transmute
  labels:
    app: transmute
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmute
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transmute
    spec:
      # The following security context sets the uid and gid under which Transmute's
      # processes will run. You may need to change this to match your cluster's
      # standards or to ensure that it has the ability to write to the data volume.
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      volumes:
        - name: transmute-data
          persistentVolumeClaim:
            claimName: transmute-data
      containers:
        - image: ghcr.io/transmute-app/transmute:latest
          name: transmute
          ports:
            - name: http
              containerPort: 3313
          volumeMounts:
            - mountPath: "/app/data"
              name: transmute-data
          readinessProbe:
            httpGet:
              path: /api/health/ready
              port: http
            initialDelaySeconds: 40
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: transmute
  namespace: transmute
spec:
  selector:
    app: transmute
  ports:
    - protocol: TCP
      port: 3313
      name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmute-ingress
  namespace: transmute
  annotations:
    # The annotations included on these next two lines assume that your cluster is using Traefik as your
    # ingress provider and wish it to provide SSL. If this is not true, you will need to change them to
    # match your cluster's ingress provider.
    traefik.ingress.kubernetes.io/router.entrypoints: 'websecure'
    traefik.ingress.kubernetes.io/router.tls: 'true'
spec:
  rules:
    - host: transmute.your-domain.example
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: transmute
                port:
                  number: 3313
